--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <img src="assets/images/Title.png" class="logo">
         <h2 id="heading">Loading... Please Wait</h2>
         <br>
+        <script src="https://cdn.logwork.com/widget/countdown.js"></script>
+<a href="https://logwork.com/countdown-timer" class="countdown-timer" data-timezone="America/Phoenix" data-textcolor="#5d19ec" data-date="2025-02-01 12:00" data-background="#7b41f0" data-digitscolor="#f7f7f7" data-unitscolor="#9b86d1">Time Until New Site!!</a>
+        <br>
         <div class="playButtonsContainer">
             <div class="playButtons" onclick="window.location.href = 'games/select.html'">Play<br><i class="fa-1x fa-solid fa-gamepad"></i></div>
             <div class="playButtons" onclick="window.location.href = 'watch/index.html'">Watch<br><i class="fa-1x fa-solid fa-play"></i></div>
