visual changes before big ones

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
         <link rel="manifest" href="manifest.json">
     </head>
     <body>
-        <span id="corner-menu"><a href="settings.html"><i class="fa-2x fa-solid fa-gears"></i></a><a href="games/select.html"><i class="fa-2x fa-solid fa-gamepad"></i></a><a href="watch/index.html"><i class="fa-2x fa-solid fa-play"></i></a><a href="chat.html"><i class="fa-2x fa-solid fa-comments"></i></a><a href="proxy.html"><i class="fa-2x fa-regular fa-sitemap"></i></a></span>
+        <span id="corner-menu"><i id="hamburger-menu" class="fa-2x fa-solid fa-navicon" onclick="toggleMenu()"></i></span>
+        <iframe id="navbar" src="assets/menu.html"></iframe>
         <img src="assets/images/Title.png" class="logo">
         <h2 id="heading">Loading... Please Wait</h2>
+        <p id="flavorText"></p>
         <br>
         <script src="https://cdn.logwork.com/widget/countdown.js"></script>
 <a href="https://logwork.com/countdown-timer" class="countdown-timer" data-timezone="America/Phoenix" data-textcolor="#5d19ec" data-date="2025-02-01 12:00" data-background="#7b41f0" data-digitscolor="#f7f7f7" data-unitscolor="#9b86d1">Time Until New Site!!</a>
@@ -27,7 +29,7 @@
             <div class="smallerPlayButtons" onclick="openSVG()">Open in data link (Not all games work, undetectable, reload the after clicking to play)</div>
             <div class="smallerPlayButtons" onclick="openAboutBlank()">Open in about:blank (All games work, semi-undetectable)</div>
         </div>
-        <p id="flavorText"></p>
+        
         <br>
         <section id="infoSection">
         <br>
@@ -50,7 +52,7 @@
 
         <br>
 
-        <h2>Join <a href="https://www.reddit.com/r/LupineVault/">r/LupineVault!</a></h2>
+        <!--<h2>Join <a href="https://www.reddit.com/r/LupineVault/">r/LupineVault!</a></h2>-->
 
         <h2>Get Involved</h2>
         <p>We encourage users to help us grow this collection! If you have games to contribute or see updates that need to be made, feel free to reach out, submit directly on our <a href="https://github.com/LupineVault/LupineVault/issues/new?assignees=InfinityLoop1%2C+tf7software&labels=enhancement%2C+New+Game&projects=&template=game-addition.md&title=Game+Addition+%5BGame+Title%5D">GitHub page</a>, join our <a href="https://discord.gg/Ex2nZUWuHF">Discord</a>, or sumbit a request <a href="request-game.html">HERE</a>. Every contribution helps us keep the archive fun and fresh for everyone!</p>
@@ -58,8 +60,8 @@
 
 
         <p>InfinityGamer save recovery: <a href="recover-from-infinitygamer.html">Click here</a></p>
-          <a href='http://www.freevisitorcounters.com'>freevisitorcounterss Homepage</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=d222fd70cd154863dc5f771e95646a1619a1d358'></script>
-<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1262052/t/1"></script>
+          <p>Page Views</p>
+          <iframe src="http://rhenryw.pythonanywhere.com/" width="100px" height="50px"></iframe>
 
 <footer><a href="privacy-policy.html">Privacy Policy</a> - By Using LupineVault You Agree To Our <a href="tos.html">Terms of Service</a></footer>
 </section>
