--- a/settings.html
+++ b/settings.html
@@ -8,7 +8,8 @@
         <script defer src="https://cloud.umami.is/script.js" data-website-id="52bfea34-46bb-49d1-976f-a5252508ddef"></script>
         </head>
     <body>
-        <span id="corner-menu"><a href="index.html"><i class="fa-2x fa-solid fa-home"></i></a><a href="games/select.html"><i class="fa-2x fa-solid fa-gamepad"></i></a><a href="watch/index.html"><i class="fa-2x fa-solid fa-play"></i></a><a href="chat.html"><i class="fa-2x fa-solid fa-comments"></i></a></span>
+        <span id="corner-menu"><i id="hamburger-menu" class="fa-2x fa-solid fa-navicon" onclick="toggleMenu()"></i></span>
+        <iframe id="navbar" src="assets/menu.html"></iframe>
         <h1>Settings</h1>
         <h2>Panic Key</h2>
         <div class="container-div" id="panic-div">
