--- a/watch/select.html
+++ b/watch/select.html
@@ -23,7 +23,8 @@
               <div id="episodes-container"></div> <!-- Episodes will be populated below the season -->
          </div>
       </div>
-    <span id="corner-menu"><a href="../index.html"><i class="fa-2x fa-solid fa-home"></i></a><a href="../settings.html"><i class="fa-2x fa-solid fa-gears"></i></a><a href="../games/select.html"><i class="fa-2x fa-solid fa-gamepad"></i></a><a href="../chat.html"><i class="fa-2x fa-solid fa-comments"></i></a></span>
+      <span id="corner-menu"><i id="hamburger-menu" class="fa-2x fa-solid fa-navicon" onclick="toggleMenu()"></i></span>
+      <iframe id="navbar" src="../assets/menu.html"></iframe>
     <img src="../assets/images/playLogo.png" class="playLogo">
     <a href="info.html">Info</a>
     <div id="tabs">
