--- a/chat.html
+++ b/chat.html
@@ -23,7 +23,8 @@
   </style>
 </head>
 <body>
-  <span id="corner-menu"><a href="../index.html"><i class="fa-2x fa-solid fa-home"></i></a><a href="games/select.html"><i class="fa-2x fa-solid fa-gamepad"></i></a><a href="../settings.html"><i class="fa-2x fa-solid fa-gears"></i></a><a href="../watch/select.html"><i class="fa-2x fa-solid fa-play"></i></a></span>
+  <span id="corner-menu"><i id="hamburger-menu" class="fa-2x fa-solid fa-navicon" onclick="toggleMenu()"></i></span>
+        <iframe id="navbar" src="assets/menu.html"></iframe>
   <widgetbot
     server="1298094096858218516"
     channel="1309304281320656977"
