--- a/games/play.html
+++ b/games/play.html
@@ -15,7 +15,8 @@
 <body>
     <iframe id="gameFrame"></iframe>
     <div id="bottomMenu">
-        <span id="corner-menu"><a href="../index.html"><i class="fa-2x fa-solid fa-home"></i></a><a href="select.html"><i class="fa-2x fa-solid fa-gamepad"></i></a><a href="../settings.html"><i class="fa-2x fa-solid fa-gears"></i></a><a href="../watch/select.html"><i class="fa-2x fa-solid fa-play"></i></a><a href="../chat.html"><i class="fa-2x fa-solid fa-comments"></i></a></span>
+        <span id="corner-menu"><i id="hamburger-menu" class="fa-2x fa-solid fa-navicon" onclick="toggleMenu()"></i></span>
+        <iframe id="navbar" src="../assets/menu.html"></iframe>
         <a id="sourceViewLink"><i class="fa-2x fa-solid fa-file"></i></a>
         <a id="downloadFilesLink"><i class="fa-2x fa-solid fa-download"></i></a>
     </div>
