--- a/games/select.html
+++ b/games/select.html
@@ -15,7 +15,8 @@
 <body>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1772815021916812"
      crossorigin="anonymous"></script>
-     <span id="corner-menu"><a href="../index.html"><i class="fa-2x fa-solid fa-home"></i></a><a href="../settings.html"><i class="fa-2x fa-solid fa-gears"></i></a><a href="../watch/index.html"><i class="fa-2x fa-solid fa-play"></i></a><a href="../chat.html"><i class="fa-2x fa-solid fa-comments"></i></a></span>
+     <span id="corner-menu"><i id="hamburger-menu" class="fa-2x fa-solid fa-navicon" onclick="toggleMenu()"></i></span>
+        <iframe id="navbar" src="../assets/menu.html"></iframe>
     <h1>Select Game</h1>
     <input type="text" id="searchInput" placeholder="Search">
     <br><br>
