--- a/proxy.html
+++ b/proxy.html
@@ -11,7 +11,8 @@
         <link rel="manifest" href="manifest.json">
     </head>
     <body>
-        <span id="corner-menu"><a href="settings.html"><i class="fa-2x fa-solid fa-gears"></i></a><a href="games/select.html"><i class="fa-2x fa-solid fa-gamepad"></i></a><a href="watch/index.html"><i class="fa-2x fa-solid fa-play"></i></a><a href="chat.html"><i class="fa-2x fa-solid fa-comments"></i></a></span>
+        <span id="corner-menu"><i id="hamburger-menu" class="fa-2x fa-solid fa-navicon" onclick="toggleMenu()"></i></span>
+        <iframe id="navbar" src="assets/menu.html"></iframe>
         <img src="assets/images/Title.png" class="logo">
 
 
@@ -24,6 +25,6 @@
         <h1>Fully Cloaked coming sooon!</h1>
 
         
-        
+        <script src="assets/js/global.js"></script>
     </body>
 </html>
