--- a/watch/info.html
+++ b/watch/info.html
@@ -8,6 +8,8 @@
     <script defer src="https://cloud.umami.is/script.js" data-website-id="52bfea34-46bb-49d1-976f-a5252508ddef"></script>
 </head>
 <body>
+    <span id="corner-menu"><i id="hamburger-menu" class="fa-2x fa-solid fa-navicon" onclick="toggleMenu()"></i></span>
+        <iframe id="navbar" src="../assets/menu.html"></iframe>
     <h1>LupineVault Watch Info</h1>
     <h2>Basic</h2>
     <p>The service we use uses ads, so be careful clicking on any ads. Adblockers may hide these ads, but they will still have the links, and these links can be dangerous, so be very careful.</p>
