--- a/watch/play.html
+++ b/watch/play.html
@@ -10,7 +10,8 @@
         <script defer src="https://cloud.umami.is/script.js" data-website-id="52bfea34-46bb-49d1-976f-a5252508ddef"></script>
     </head>
     <body>
-        <span id="corner-menu"><a href="../index.html"><i class="fa-2x fa-solid fa-home"></i></a><a href="../settings.html"><i class="fa-2x fa-solid fa-gears"></i></a><a href="../games/select.html"><i class="fa-2x fa-solid fa-gamepad"></i></a><a href="select.html"><i class="fa-2x fa-solid fa-play"></i></a><a href="../chat.html"><i class="fa-2x fa-solid fa-comments"></i></a></span>
+        <span id="corner-menu"><i id="hamburger-menu" class="fa-2x fa-solid fa-navicon" onclick="toggleMenu()"></i></span>
+        <iframe id="navbar" src="../assets/menu.html"></iframe>
         <iframe id="movieIframe" scrolling="no" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="origin" allowfullscreen></iframe>
         <script src="../assets/js/watchPlay.js"></script>
     </body>
