small site redesign bug fixes

--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
         <img src="assets/images/Title.png" class="logo">
         <h2 id="heading">Loading... Please Wait</h2>
         <p id="flavorText"></p>
+        <h4 id="visitorCount"></h4>
         <br>
-        <script src="https://cdn.logwork.com/widget/countdown.js"></script>
-<a href="https://logwork.com/countdown-timer" class="countdown-timer" data-timezone="America/Phoenix" data-textcolor="#5d19ec" data-date="2025-02-01 12:00" data-background="#7b41f0" data-digitscolor="#f7f7f7" data-unitscolor="#9b86d1">Time Until New Site!!</a>
-        <a href="new-look.html">Learn More</a>
+        
         <br>
         <div class="playButtonsContainer">
             <div class="playButtons" onclick="window.location.href = 'games/select.html'">Play<br><i class="fa-1x fa-solid fa-gamepad"></i></div>
@@ -30,6 +29,10 @@
             <div class="smallerPlayButtons" onclick="openSVG()">Open in data link (Not all games work, undetectable, reload the after clicking to play)</div>
             <div class="smallerPlayButtons" onclick="openAboutBlank()">Open in about:blank (All games work, semi-undetectable)</div>
         </div>
+
+        <script src="https://cdn.logwork.com/widget/countdown.js"></script>
+<a href="https://logwork.com/countdown-timer" class="countdown-timer" data-timezone="America/Phoenix" data-textcolor="#5d19ec" data-date="2025-02-01 12:00" data-background="#7b41f0" data-digitscolor="#f7f7f7" data-unitscolor="#9b86d1">Time Until Site Redesign</a>
+        <a href="new-look.html"><h2>Learn More</h2></a><p style="font-size: 8px; margin-top: -20px;">psst... there's a sneak peek of the redesign</p>
         
         <br>
         <section id="infoSection">
@@ -61,12 +64,31 @@
 
 
         <p>InfinityGamer save recovery: <a href="recover-from-infinitygamer.html">Click here</a></p>
-          <p>Page Views</p>
-          <iframe src="http://rhenryw.pythonanywhere.com/" width="100px" height="50px"></iframe>
+
 
 <footer><a href="privacy-policy.html">Privacy Policy</a> - By Using LupineVault You Agree To Our <a href="tos.html">Terms of Service</a></footer>
 </section>
         <script src="assets/js/global.js"></script>
         <script src="assets/js/index.js"></script>
+        <script src="assets/vanta/three.r134.min.js"></script>
+<script src="assets/vanta/vanta.net.min.js"></script>
+<script>
+VANTA.NET({
+  el: "body",
+  mouseControls: false,
+  touchControls: false,
+  gyroControls: false,
+  minHeight: 200.00,
+  minWidth: 200.00,
+  scale: 1.00,
+  scaleMobile: 1.00,
+  color: "#4311a5",
+  backgroundColor: "#252025",
+  points: 20.00,
+  maxDistance: 29.00,
+  spacing: 20.00,
+  showDots: false
+})
+</script>
     </body>
 </html>
