Screen Studio sponsor

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <br>
 
-        <!--<h2>Join <a href="https://www.reddit.com/r/LupineVault/">r/LupineVault!</a></h2>-->
+        <!--<h2>Join <a href="https://www.reddit.com/r/LupineVault/">r/LupineVault!</a></h2>  caue twentyfour7 got himself kicked off of Reddit :(-->
 
         <h2>Get Involved</h2>
         <p>We encourage users to help us grow this collection! If you have games to contribute or see updates that need to be made, feel free to reach out, submit directly on our <a href="https://github.com/LupineVault/LupineVault/issues/new?assignees=InfinityLoop1%2C+tf7software&labels=enhancement%2C+New+Game&projects=&template=game-addition.md&title=Game+Addition+%5BGame+Title%5D">GitHub page</a>, join our <a href="https://discord.gg/Ex2nZUWuHF">Discord</a>, or sumbit a request <a href="request-game.html">HERE</a>. Every contribution helps us keep the archive fun and fresh for everyone!</p>
@@ -66,7 +66,7 @@
         <p>InfinityGamer save recovery: <a href="recover-from-infinitygamer.html">Click here</a></p>
 
 
-<footer><a href="privacy-policy.html">Privacy Policy</a> - By Using LupineVault You Agree To Our <a href="tos.html">Terms of Service</a></footer>
+<footer><a href="privacy-policy.html">Privacy Policy</a> - By Using LupineVault You Agree To Our <a href="tos.html">Terms of Service</a> - Thanks To <a href="https://screen.studio/">Screen Studio</a> For Their Support</footer>
 </section>
         <script src="assets/js/global.js"></script>
         <script src="assets/js/index.js"></script>
