--- a/proxy/static/index.html
+++ b/proxy/static/index.html
@@ -56,5 +56,5 @@
 </script>
 
 
-<script src="/settings/js/index.js"></script>
-<script src="/settings/js/settings.js"></script>
+<script src="sindex.js"></script>
+<script src="settings.js"></script>
