--- a/proxy/static/index.html
+++ b/proxy/static/index.html
@@ -33,11 +33,21 @@
          <a href="https://github.com/TheTIW/UV-Static" target="_blank"class="fa-brands fa-github"></a>
          <a href="https://starttiw.org" target="_blank"class="fa-solid fa-cloud"></a>
       </div>
-      <script src="uv/uv.bundle.js" defer></script>
-      <script src="uv/uv.config.js" defer></script>
-      <script src="register-sw.js" defer></script>
-      <script src="search.js" defer></script>
-      <script src="index.js" defer></script>
+    <script src="uv/uv.bundle.js" defer></script>  <!-- Ensure this is first -->
+   <script>
+    self.__uv$config = {
+    prefix: '/static/tiw/',
+    bare: 'https://bare.benrogo.net',
+    encodeUrl: Ultraviolet.codec.xor.encode,  // Now this will work
+    decodeUrl: Ultraviolet.codec.xor.decode,  // Now this will work
+    handler: '/static/uv/uv.handler.js',
+    bundle: '/static/uv/uv.bundle.js',
+    config: '/static/uv/uv.config.js',
+    sw: '/static/uv/uv.sw.js',
+    };
+   </script>
+<script src="uv/uv.config.js" defer></script>  <!-- Then load uv.config.js -->
+<script src="register-sw.js" defer></script>
    <!-- Cloudflare Pages Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "a08f0af13760458b882afa6f6e7f1025"}'></script><!-- Cloudflare Pages Analytics --><script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"90073d9c4b3ddba6","version":"2024.10.5","r":1,"token":"1f54a7c5df03489795ac156ce813112e","serverTiming":{"name":{"cfExtPri":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}}}' crossorigin="anonymous"></script>
 </body>
 </html>
