--- a/proxy/index.html
+++ b/proxy/index.html
@@ -9,7 +9,7 @@
       
       <link rel="shortcut icon" type="image/jpg" href="~/favicon.ico"/>
       
-      <link rel="stylesheet" href="../../assets/font-awesome/css/all.css">
+      <link rel="stylesheet" href="../assets/font-awesome/css/all.css">
       <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 
@@ -66,6 +66,9 @@
       <script src="register-sw.js" charset="UTF-8" defer></script>
       <script src="search.js" charset="UTF-8" defer></script>
       <script src="index.js" charset="UTF-8" defer></script>
+      <script src="../assets/js/global.js"></script>
+      <script src="../assets/js/index.js"></script>
+      <script src="../assets/vanta/three.r134.min.js"></script>
       <div id="footer">
          <footer><a href="privacy-policy.html">Privacy Policy</a> - By Using LupineVault You Agree To Our <a href="tos.html">Terms of Service</a> - Thanks To <a href="https://screen.studio/">Screen Studio</a> For Their Support</footer>
       </div>
