--- a/proxy/index.html
+++ b/proxy/index.html
@@ -33,6 +33,7 @@
    </head>
    <body>
       <span id="corner-menu"><i id="hamburger-menu" class="fa-2x fa-solid fa-navicon" onclick="toggleMenu()"></i></span>
+      <iframe id="navbar" src="../assets/menu.html"></iframe>
       <canvas id="canvas"></canvas>
       <div id="header">
          <img src="Title.png" alt="Logo" id="bigTitle">
