--- a/proxy/index.html
+++ b/proxy/index.html
@@ -6,6 +6,7 @@
       <link rel="stylesheet" href="../../assets/styles/css/global.min.css">
       <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
       <link rel="stylesheet" href="index.css">
+      <link rel="icon" type="image/x-icon" href="logo.png">
       
       <link rel="shortcut icon" type="image/jpg" href="~/favicon.ico"/>
       
