--- a/assets/menu.html
+++ b/assets/menu.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <ul>
-            <li><i class="fa-1x fa-solid fa-home"></i><a onclick="redirect('/index.html')">Home</a></li>
+            <li><i class="fa-1x fa-solid fa-home"></i><a onclick="redirect('/')">Home</a></li>
             <li><i class="fa-1x fa-solid fa-gears"></i><a onclick="redirect('/settings.html')">Settings</a></li>
             <li><i class="fa-1x fa-solid fa-gamepad"></i><a onclick="redirect('/games/select.html')">Games</a></li>
             <li><i class="fa-1x fa-solid fa-play"></i><a onclick="redirect('/watch/index.html')">Watch</a></li>
