--- a/TIW/index.html
+++ b/TIW/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="../assets/favicons/favicon.ico">
     <title>TIW + LupineVault</title>
     <style>
         body {
