--- a/TIW/index.html
+++ b/TIW/index.html
@@ -43,7 +43,7 @@
 <body>
     <div class="container">
         <img src="main.gif" alt="Main GIF">
-        <h1>TIW Is Mergine With LupineVault</h1>
+        <h1>TIW Is Merging With LupineVault</h1>
         <p>We are excited to announce that TIW is becoming a part of LupineVault! The same developers you know and trust and more are behind it, ensuring the same great experience you loved with TIW.</p>
         <p>LupineVault not only includes all the features you enjoyed on TIW, but also adds free movies and shows, along with even more ways to unblock content.</p>
         <a href="https://lupinevault.com/" class="button">Go To LupineVault</a>
