--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
 
         <br>
 
+        <p>Come visit <a href="https://rhw.one/">tf7software's site</a></p>
+
+        <br>
+
+        <br>
+
         <h3>Become a Coyote Crusader!</h3>
         <p>Download <a href="assets/images/lv-wallpaper.png" download="SuperAwesomeLupineVault-WP.png">THIS</a> wallpaper, put it on a public computer (library, school, etc.) and add LupineVault to desktop and put it in the silver box. Then take a picture and send it to <a href="mailto:rhw@lupinevault.com">rhw@lupinevault.com</a> to get a prize! Don't know how? <a href="assets/vids/CoyoteCrusadersDemoVid2025.mp4">Here's a demo video!</a></p>
 
