blob cloaking, proxy style consistency, new particles

--- a/games/play.html
+++ b/games/play.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+    <div id="particles-js"></div>
+
+        <script src="/particles.min.js"></script>
     <iframe id="gameFrame"></iframe>
     <div id="bottomMenu">
         <span id="corner-menu"><i id="hamburger-menu" class="fa-2x fa-solid fa-navicon" onclick="toggleMenu()"></i></span>
