--- a/recover-from-infinitygamer.html
+++ b/recover-from-infinitygamer.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <div id="particles-js"></div>
+
+        <script src="/particles.min.js"></script>
     <input type="file" id="fileInput">
     <p id="confirmation"></p>
     <p>Due to the move, some game saves may be lost unfortunately. Sorry for any inconvenience.</p>
