--- a/request-game.html
+++ b/request-game.html
@@ -8,6 +8,9 @@
     <script defer src="https://cloud.umami.is/script.js" data-website-id="52bfea34-46bb-49d1-976f-a5252508ddef"></script>
 </head>
 <body>
+    <div id="particles-js"></div>
+
+        <script src="/particles.min.js"></script>
     <main class="container">
         <h1>Request a Game</h1>
         <p>Please fill out the form below to submit your game request. We look forward to hearing your suggestions!</p>
