--- a/watch/select.html
+++ b/watch/select.html
@@ -13,6 +13,9 @@
     <script defer src="https://cloud.umami.is/script.js" data-website-id="52bfea34-46bb-49d1-976f-a5252508ddef"></script>
 </head>
 <body>
+    <div id="particles-js"></div>
+
+        <script src="/particles.min.js"></script>
     <div id="season-episode-explorer">
         <div id="season-episode-container">
             <div id="season-episode-header">
