--- a/assets/menu.html
+++ b/assets/menu.html
@@ -14,8 +14,7 @@
             <li><i class="fa-1x fa-solid fa-play"></i><a onclick="redirect('/watch/index.html')">Watch</a></li>
             <li><i class="fa-1x fa-solid fa-comments"></i><a onclick="redirect('/chat.html')">Chat</a></li>
             <li><i class="fa-1x fa-solid fa-unlock"></i><a onclick="redirect('/active/index.html')">Proxy</a></li>
-            <li><i class="fa-1x fa-light fa-microchip-ai"></i><a onclick="redirect('/proxy/active/hvtrs8%2F-cjavgrt%2Fcnole%2F74c%2Cpcggs%2Cdgv-')">AI</a></li>
-
+            <!--<li><i class="fa-1x fa-light fa-microchip-ai"></i><a onclick="redirect('/proxy/active/hvtrs8%2F-cjavgrt%2Fcnole%2F74c%2Cpcggs%2Cdgv-')">AI</a></li>-->
         </ul>
         <script src="/assets/js/global.js"></script>
     </body>
