--- a/chat.html
+++ b/chat.html
@@ -23,6 +23,9 @@
   </style>
 </head>
 <body>
+  <div id="particles-js"></div>
+
+        <script src="/particles.min.js"></script>
   <span id="corner-menu"><i id="hamburger-menu" class="fa-2x fa-solid fa-navicon" onclick="toggleMenu()"></i></span>
         <iframe id="navbar" src="assets/menu.html"></iframe>
   <widgetbot
