--- a/games/select.html
+++ b/games/select.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+    <div id="particles-js"></div>
+
+        <script src="/particles.min.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1772815021916812"
      crossorigin="anonymous"></script>
      <span id="corner-menu"><i id="hamburger-menu" class="fa-2x fa-solid fa-navicon" onclick="toggleMenu()"></i></span>
