--- a/settings.html
+++ b/settings.html
@@ -8,6 +8,9 @@
         <script defer src="https://cloud.umami.is/script.js" data-website-id="52bfea34-46bb-49d1-976f-a5252508ddef"></script>
         </head>
     <body>
+        <div id="particles-js"></div>
+
+        <script src="/particles.min.js"></script>
         <span id="corner-menu"><i id="hamburger-menu" class="fa-2x fa-solid fa-navicon" onclick="toggleMenu()"></i></span>
         <iframe id="navbar" src="assets/menu.html"></iframe>
         <h1>Settings</h1>
