--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="icon" type="image/x-icon" href="assets/favicons/favicon.ico">
         <link rel="stylesheet" href="assets/font-awesome/css/all.css">
         <link rel="manifest" href="manifest.json">
+        <meta name="monetag" content="cb52a242cc19b4bf858abdf5facb86b0">
     </head>
     <body>
         <div id="particles-js"></div>
