--- a/games/select.html
+++ b/games/select.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="../assets/styles/css/gameSelect.min.css">
         <link rel="stylesheet" href="../assets/font-awesome/css/all.css">
         <script defer src="https://cloud.umami.is/script.js" data-website-id="52bfea34-46bb-49d1-976f-a5252508ddef"></script>
+        <script src="https://alwingulla.com/88/tag.min.js" data-zone="125445" async data-cfasync="false"></script>
 </head>
 
 <body>
