--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <link rel="icon" type="image/x-icon" href="assets/favicons/favicon.ico">
         <link rel="stylesheet" href="assets/font-awesome/css/all.css">
         <link rel="manifest" href="manifest.json">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1772815021916812"
+     crossorigin="anonymous"></script>
        
     </head>
     <body>
