--- a/games/select.html
+++ b/games/select.html
@@ -10,6 +10,8 @@
         <link rel="stylesheet" href="../assets/styles/css/gameSelect.min.css">
         <link rel="stylesheet" href="../assets/font-awesome/css/all.css">
         <script defer src="https://cloud.umami.is/script.js" data-website-id="52bfea34-46bb-49d1-976f-a5252508ddef"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1772815021916812"
+     crossorigin="anonymous"></script>
         
 </head>
 
